<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_version">Ver:</string>
    <string name="system_time">Time:</string>
    <string name="app_name">Printer</string>
    <string name="action_settings">Set</string>
    <string name="hello_world">Hello world!</string>
	<string name="ControlTab">Control</string>
	<string name="manualCtrlTab">Control man</string>
	<string name="Home">Home</string>
	<string name="Edit">Edit</string>
	<string name="Settings">Settings</string>
	<string name="str_btn_start">Start</string>
	<string name="str_btn_stop">Stop</string>
	<string name="str_btn_launch">Start</string>
	<string name="str_btn_clean">Purge</string>
	<string name="str_btn_sclean">Purge</string>
	<string name="str_purge_confirm">Confirm to purge</string>
	<string name="str_clean_confirm">This Clean will take about 5 minutes, continue?</string>
	<string name="str_under_purging">Purging, please try later.</string>
	<string name="str_under_printing">Please stop print then try again.</string>
	<string name="str_btn_open">Open</string>
	<string name="str_remain_ink">Ink</string>
	<string name="str_remain_ptimes">Printed: </string>
	<string name="str_btn_new">New</string>
	<string name="str_btn_save">Save</string>
	<string name="str_btn_saveprint">SavePrint</string>
	<string name="str_btn_cancel">Cancel</string>
	<string name="str_btn_close">Close</string>
	<string name="str_btn_backprint">Back\nPrint</string>
	<string name="str_ip_add">Ip Addr</string>
	<string name="str_device_number">Device:</string>
	<string name="str_dialog_surecancel">warning:</string>
	<string name="str_device_but_sure">Sure</string>
	<string name="str_ip_ed">Please set IP and try again</string>
	<string name="str_print_documents"></string>
	<string name="str_port">Port</string>
	<string name="str_information">Do you want to execute?</string>
	<string name="str_btn_saveas">Save\nas</string>
	<string name="str_btn_prerecord">Up</string>
	<string name="str_btn_nextrecord">Down</string>
	<string name="str_btn_send">Send</string>
	<string name="str_btn_set">Set</string>
	<string name="str_btn_get">Text</string>
	<string name="str_btn_print">Print</string>
	<string name="str_btn_finish">Finish</string>
	<string name="str_btn_header1">Pen1</string>
	<string name="str_btn_header2">Pen2</string>
	<string name="str_btn_header3">Pen3</string>
	<string name="str_btn_header4">Pen4</string>
	<string name="strDate">Date:</string>
	<string name="strInklevel">Remain: </string>
	<string name="strPhotocellState">Photocell</string>
	<string name="strEncoderState">Encoder</string>
	<string name="strPrintstate">Printing：</string>
	<string name="strPrinting">Printing</string>
	<string name="strPrintok">Ready</string>
	<string name="strOn">On</string>
	<string name="strOff">Off</string>
	<string name="strwaitting">printing......</string>
	<string name="str_csvfile">Csv</string>
	<string name="str_tlkfile">Tlk</string>
	<string name="str_binfile">Open</string>
	<string name="str_openfile">Open...</string>
	<string name="str_open_msg">Msg...</string>
	<string name="str_opentemplate">Temp...</string>
	<string name="str_seldata">Open...</string>
	<string name="str_mvforward">Forward</string>
	<string name="str_mvbackward">Backward</string>
	<string name="str_preview">Preview</string>
	<string name="str_del">Delete</string>
	<string name="str_multi_select">Group</string>
	<string name="str_btn_shift">Shift</string>
	<string name="str_btn_second">Second</string>
	<string name="str_btn_upgrade">Upgrade</string>
	<string name="str_btn_setDate">Set Date</string>
	<string name="str_btn_setTime">Set Time</string>
	<string name="str_btn_image">Logo</string>
	<string name="str_net_device_ink">Ink</string>
	<string name="str_goto">goto</string>
	<string name="strWidth">Width</string>
	<string name="strHigh">Size</string>
	<string name="strHightype">Stepwise</string>
	<string name="strReverse">Inversion</string>
	<string name="strRevert">Revert</string>
	<string name="strXcor">Horizon</string>
	<string name="strYcor">Vertical</string>
	<string name="strCnt">Content</string>
	<string name="strDefault">0</string>
	<string name="txtDefault">text</string>
	<string name="strDragable">Dragable</string>
	<string name="strShow">Show</string>
	<string name="strFontsize">Font Size</string>
	<string name="strFont">Font</string>
	<string name="strLinewidth">Line Width</string>
	<string name="strBits">Digits</string>
	<string name="strImage">Image</string>
	<string name="strDirect">Direction</string>
	<string name="strShift1">Shift1</string>
	<string name="strShift2">Shift2</string>
	<string name="strShift3">Shift3</string>
	<string name="strShift4">Shift4</string>
	<string name="strShift5">Shift5</string>
	<string name="strInfoname">Object</string>
	<string name="strHeadType">PenType</string>
	<string name="strHeadResolution">HD</string>
	<string name="strUpgradeConfirm">Do upgrade?</string>
	<string name="strUpgradeNoApk">No Upgrade file!!!</string>
	<string name="strSaving">saving, please wait...</string>
	<string name="strLoading">loading, please wait...</string>
	<string name="strCopying">Copying, please wait...</string>
	<string name="strInsertSerial">Please connect device...</string>
	<string name="strReinsertSerial">Error, please reconnect device</string>
	<string name="str_net_error">Network communication error</string>
	<string name="strGroup">Group</string>
	<string name="strCode">Code Type</string>
	<string name="strBarsource">Data</string>
	<string name="strLinetype">Line Type</string>
	<string name="str_ok">OK</string>
	<string name="strNativeBtn">Cancel</string>
	<string name="strRtFmt">Format</string>
	<string name="strOffset">Offset</string>
	<string name="strFrame">Frame</string>
	<string name="strErrorCorrectionLevel">EC Level</string>
	<string name="objectListName">Show List</string>
	<string name="objectInfoName">Show TEXT</string>
	<string name="object_Msg">TEXT</string>
	<string name="object_text">Text</string>
	<string name="object_realtime">Date</string>
	<string name="object_counter">Counter</string>
	<string name="object_bar">Barcode</string>
	<string name="object_pic">Graphic</string>
	<string name="object_julian">Julian</string>
	<string name="object_line">Line</string>
	<string name="object_rect">Rect</string>
	<string name="object_ellipse">Ellipse</string>
	<string name="object_shift">Shift</string>
	<string name="object_second">Second</string>
	<string name="object_hypertext">Hypertext</string>
	<string name="object_hypertext_hint1"><u>@Y</u>:Year <u>@M</u>:Month <u>@D</u>:Date</string>
	<string name="object_hypertext_hint2"><u>@H</u>:Hour <u>@N</u>:Minute <u>@S</u>:Second</string>
	<string name="object_hypertext_hint3"><u>@T</u>:Shift <u>@A</u>:Day <u>@W</u>:Week No.</string>
	<string name="object_hypertext_hint4"><u>@2</u>,<u>@3C</u>,<u>@4CC</u>,<u>@5CCC</u>:Counters</string>
	<string name="object_hypertext_hint6"><u>@#n#m#</u>:Dynamic Text. n:index; m:bits</string>
	<string name="object_hypertext_hint5"><u>@UG</u>:User Group</string>
	<string name="object_weekofyear">WeekOfYear</string>
	<string name="object_weekday">WeekDay</string>
	<string name="object_charHour">AlphaHour</string>
	<string name="object_msg_name">Subject</string>
	<string name="object_qr">QRCode</string>
	<string name="object_dynamic_qr">DynamicQR</string>
	<string name="object_dynamic_barcode">DynamicBarcode</string>
	<string name="object_dynamictext">Dynamictext</string>
	<string name="object_dtindex">Index</string>
	<string name="strParam0">00.Reserved</string>
	<string name="strPrSpeedname">01.Speed</string>
	<string name="strDelay_key">delay_key</string>
	<string name="strDelayname">02.Delay</string>
	<string name="strDelay_summary">Set Delay</string>
	<string name="strParam3">03.Reserved</string>
	<string name="strTrigger_key">trigger_key</string>
	<string name="strTriggername">04.Trigger</string>
	<string name="strTrigger_summary">Trigger Mode</string>
	<string name="strDirection_key">direction_key</string>
	<string name="strSyncname">05.Encoder</string>
	<string name="strDirectionname">05.Sync</string>
	<string name="strBold">06.Bold</string>
	<string name="strFixlen">07.Length</string>
	<string name="strFixtime">08.Fix Time</string>
	<string name="strHeadTemp">09.Head Temp</string>
	<string name="strResvTemp">10.Box Temp</string>
	<string name="strfontwidth">11.fontWidth</string>
	<string name="strDotname">12.Dotsize</string>
	<string name="strDirection_summary">Choose Direction</string>
	<string name="strEncoder_key">encoder</string>
	<string name="strEncodername">03.Encoder</string>
	<string name="strEncoder_summary">Set Encoder mode</string>
	<string name="strHoriRes_key">horires_key</string>
	<string name="strHoriResname">04.Hori</string>
	<string name="strHoriRes_summary">Setting Hori Res</string>
	<string name="strVertRes_key">vertres_key</string>
	<string name="strVertResname">05.Vert</string>
	<string name="strVertRes_summary">Setting Vert Res</string>
	<string name="strTimeunit">ms</string>
	<string name="strResunit">dpi</string>
	<string name="strLenunit">0.1mmm</string>
	<string name="strTempunit">C</string>
	<string name="strPrSpeedUnit">HZ</string>
	<string name="strResvname8">08.Reserved</string>
	<string name="strResvname9">09.Reserved</string>
	<string name="strResvname10">10.Reserved</string>
	<string name="strResvname11">11.Reserved</string>
	<string name="strResvname12">12.Reserved</string>
	<string name="strResvname13">13.Reserved</string>
	<string name="strResvname14">14.Reserved</string>
	<string name="strResvname15">15.Reserved</string>
	<string name="strResvname16">16.Reserved</string>
	<string name="strResvname17">17.Reserved</string>
	<string name="strResvname18">18.Reserved</string>
	<string name="strResvname19">19.Reserved</string>
	<string name="strResvname20">20.Reserved</string>
	<string name="strResvname21">21.Reserved</string>
	<string name="strResvname22">22.Reserved</string>
	<string name="strResvname23">23.Reserved</string>
	<string name="strResvname24">24.Reserved</string>
	<string name="strResvname25">25.Reserved</string>
	<string name="strResvname26">26.Reserved</string>
	<string name="strResvname27">27.Reserved</string>
	<string name="strResvname28">28.Reserved</string>
	<string name="strResvname29">29.Reserved</string>
	<string name="strResvname30">30.Reserved</string>
	<string name="strResvname31">31.Reserved</string>
	<string name="strResvname32">32.Reserved</string>
	<string name="strResvname33">33.Reserved</string>
	<string name="strResvname34">34.Reserved</string>
	<string name="strResvname35">35.Reserved</string>
	<string name="strResvname36">36.Reserved</string>
	<string name="strResvname37">37.Reserved</string>
	<string name="strResvname38">38.One for all</string>
	<string name="strResvname39">39.Reserved</string>
	<string name="strResvname40">40.Reserved</string>
	<string name="strResvname41">41.Reserved</string>
	<string name="strResvname42">42.Reserved</string>
	<string name="strResvname43">43.Pens</string>
	<string name="strResvname44">44.Reserved</string>
	<string name="strResvname45">45.Reserved</string>
	<string name="strResvname46">46.Reserved</string>
	<string name="strResvname47">47.Reserved</string>
	<string name="strResvname48">48.Reserved</string>
	<string name="strResvname49">49.Reserved</string>
	<string name="strResvname50">50.Reserved</string>
	<string name="strResvname51">51.Reserved</string>
	<string name="strResvname52">52.Reserved</string>
	<string name="strResvname53">53.Reserved</string>
	<string name="strResvname54">54.Reserved</string>
	<string name="strResvname55">55.Reserved</string>
	<string name="strResvname56">56.Reserved</string>
	<string name="strResvname57">57.Reserved</string>
	<string name="strResvname58">58.Reserved</string>
	<string name="strResvname59">59.Reserved</string>
	<string name="strCounterEditTitle">Modify Counter Value</string>
	<string name="strCounterClear">Clear</string>
</resources>