<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/background"
    >
    
    <include layout="@layout/obj_info_button"
        android:id="@+id/buttons"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_alignParentBottom="true"
	    	android:layout_marginTop="10dp"
	    	/>
    
	<ScrollView android:id="@+id/viewInfo"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_marginTop="10dp"
	    android:layout_above="@+id/buttons">

	    <RelativeLayout
	        android:id="@+id/objectInfoTable"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        >

	        <include android:id="@+id/base_info_bar" layout="@layout/obj_info_base"/>


	        <TextView
		    	android:id="@+id/spinCode"
		        android:layout_width="@dimen/settingsItemLength"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="150dp"
		        android:layout_below="@id/base_info_bar"
		        android:layout_marginTop="10dp"
		        android:gravity="center_vertical"
		        android:drawableRight="@drawable/spiner_down_btn"
		        android:textSize="@dimen/objinfoTextsize"
		        android:textColor="#000000"
		        android:background="#ffffff"
		        />

	        <TextView android:id="@+id/viewCode"
	            android:layout_marginLeft="10dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@id/spinCode"
	            android:textSize="30sp"
	            android:text="@string/strCode"
	            android:textColor="#000000"
	            />
<!-- H.M.Wang 2020-2-25 追加ITF_14边框有无的设置 -->
			<CheckBox android:id="@+id/checkFrame"
				android:layout_alignLeft="@id/spinCode"
				android:layout_marginTop="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/spinCode"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				android:visibility="gone"
				style="@style/CheckboxTheme"
				android:checked="false"/>


			<TextView android:id="@+id/captionFrame"
				android:layout_marginLeft="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@id/checkFrame"
				android:visibility="gone"
				android:textSize="30sp"
				android:text="@string/strFrame"
				android:textColor="#000000"
				/>
<!-- End of H.M.Wang 2020-2-25 追加ITF_14边框有无的设置 -->

			<CheckBox android:id="@+id/check_Num_show"
	            android:layout_alignLeft="@id/spinCode"
				android:layout_marginTop="10dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/checkFrame"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				style="@style/CheckboxTheme"
	            android:checked="false"/>

	        <TextView android:id="@+id/view_num_show"
	            android:layout_alignLeft="@id/viewCode"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@id/check_Num_show"
	            android:textSize="30sp"
	            android:text="@string/strShow"
	            android:textColor="#000000"/>

<!-- H.M.Wang 2022-12-20 追加反白设置 -->
			<CheckBox android:id="@+id/check_revert"
				android:layout_alignLeft="@id/spinCode"
				android:layout_marginTop="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/check_Num_show"
				android:paddingLeft="15dp"
				android:paddingRight="15dp"
				style="@style/CheckboxTheme"
				android:checked="false"/>

			<TextView android:id="@+id/caption_check_revert"
				android:layout_alignLeft="@id/viewCode"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@id/check_revert"
				android:textSize="30sp"
				android:text="@string/strRevert"
				android:textColor="#000000"/>
<!-- End of H.M.Wang 2022-12-20 追加反白设置 -->

			<EditText
	            android:id="@+id/et_text_size"
	            android:layout_alignLeft="@id/spinCode"
	            android:layout_width="@dimen/settingsItemLength"
	            android:layout_height="wrap_content"
	            android:inputType="number"
	            android:textSize="30sp"
	            android:layout_below="@id/check_revert"
				android:layout_marginTop="10dp"
	            />

	        <TextView android:id="@+id/view_text_size"
	            android:layout_alignLeft="@id/viewCode"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBaseline="@id/et_text_size"
	            android:textSize="30sp"
	            android:text="@string/strFontsize"
	            android:textColor="#000000"/>

<!-- H.M.Wang 2023-2-14 追加QR码的纠错级别 -->
			<TextView
				android:id="@+id/spinErroCorrectionLevel"
				android:layout_width="@dimen/settingsItemLength"
				android:layout_height="wrap_content"
				android:layout_marginLeft="150dp"
				android:layout_below="@id/et_text_size"
				android:layout_marginTop="10dp"
				android:gravity="center_vertical"
				android:drawableRight="@drawable/spiner_down_btn"
				android:textSize="@dimen/objinfoTextsize"
				android:textColor="#000000"
				android:background="#ffffff"
				android:visibility="gone"
				/>

			<TextView android:id="@+id/capErrorCorrectionLevel"
				android:layout_marginLeft="10dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@id/spinErroCorrectionLevel"
				android:textSize="30sp"
				android:text="@string/strErrorCorrectionLevel"
				android:textColor="#000000"
				android:visibility="gone"
				/>
<!-- End of H.M.Wang 2023-2-14 追加QR码的纠错级别 -->

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/spinErroCorrectionLevel"
				android:background="#ff666666"
				android:layout_margin="60dp"
				android:orientation="vertical" >
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#ff666666"
					android:layout_margin="5dp"
					android:lines="1"
					android:text="@string/object_hypertext_hint1"
					android:textSize="40sp"
					android:textColor="#ffbbbbbb"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#ff666666"
					android:layout_margin="5dp"
					android:lines="1"
					android:text="@string/object_hypertext_hint2"
					android:textSize="40sp"
					android:textColor="#ffbbbbbb"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#ff666666"
					android:layout_margin="5dp"
					android:lines="1"
					android:text="@string/object_hypertext_hint3"
					android:textSize="40sp"
					android:textColor="#ffbbbbbb"/>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#ff666666"
					android:layout_margin="5dp"
					android:lines="1"
					android:text="@string/object_hypertext_hint4"
					android:textSize="40sp"
					android:textColor="#ffbbbbbb"/>
<!-- H.M.Wang 2023-12-30 增加对DT的支持。 -->
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#ff666666"
					android:layout_margin="5dp"
					android:lines="1"
					android:text="@string/object_hypertext_hint6"
					android:textSize="40sp"
					android:textColor="#ffbbbbbb"/>
<!-- End of H.M.Wang 2023-12-30 增加对DT的支持。 -->
<!-- H.M.Wang 2022-11-26 追加User Group超文本信息说明 -->
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="#ff666666"
					android:layout_margin="5dp"
					android:lines="1"
					android:text="@string/object_hypertext_hint5"
					android:textSize="40sp"
					android:textColor="#ffbbbbbb"/>
<!-- End of H.M.Wang 2022-11-26 追加User Group超文本信息说明 -->
			</LinearLayout>

	    </RelativeLayout>
	</ScrollView>

</RelativeLayout>
