<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background"
	android:orientation="vertical" >

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="5dp"
		android:lines="1"
		android:text="@string/strCounterEditTitle"
		android:textColor="@color/black"
		android:gravity="center"
		android:textSize="30sp" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:layout_margin="5dp"
		android:orientation="horizontal" >
		<TextView
			android:id="@+id/counterIndex"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="10dp"
			android:textColor="@color/black"
			android:textSize="30sp" />
		<EditText
			android:id="@+id/counterEdit"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:textSize="30sp" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:divider="@drawable/divider"
		android:showDividers="middle"
		android:orientation="horizontal" >
		<TextView
			android:id="@+id/confirm"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/bg_mid_button"
			android:gravity="center"
			android:textSize="30sp"
			android:textColor="@color/black"
			android:text="@string/str_ok"
			/>

		<TextView
			android:id="@+id/cancel"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/bg_mid_button"
			android:gravity="center"
			android:textSize="30sp"
			android:textColor="@color/black"
			android:text="@string/strNativeBtn"
			/>
		<TextView
			android:id="@+id/idBtnClear"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:background="@drawable/bg_mid_button"
			android:gravity="center"
			android:textSize="30sp"
			android:textColor="@color/black"
			android:text="@string/strCounterClear" />
	</LinearLayout>
</LinearLayout>